[package]
name = "root_commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
log = "0.4.17"
bitflags = "1.3.2"
thiserror = "1.0.40"
uuid = "1.3.1"
serde_cr = { package = "serde", version = "1.0.160", features = ["derive"], default-features = false, optional = true }
serde_bytes = { version = "0.11.9", optional = true }
dashmap = "5.4.0"
futures = "0.3.28"
crc = "2.1.0"
static_assertions = "1.1.0"
tokio = { version = "1.27.0", features = ["rt", "macros", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
btleplug = { version = "0.10", features = ["serde"] }
rand = "0.8.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = ["Devices_Bluetooth", "Devices_Bluetooth_GenericAttributeProfile", "Devices_Bluetooth_Advertisement", "Devices_Radios", "Foundation_Collections", "Foundation", "Storage_Streams"] }
